# heart2heart

./: README.md
backend/: .env  main.py  pyproject.toml  requirements.txt
docs/: prd.md  team_AI.md  team_Application.md  team_UI.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/card/[cardId]/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/history/: page.tsx
frontend/app/history/[id]/: page.tsx
frontend/components/card/: CardNavigation.tsx  QuestionCard.tsx
frontend/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx
frontend/components/common/: ConfirmModal.tsx  Navbar.tsx
frontend/components/history/: ConversationList.tsx  ConversationListItem.tsx  OverallSummary.tsx  SpeakerSummary.tsx  TranscriptViewer.tsx
frontend/components/home/: DeckCard.tsx  DeckGrid.tsx
frontend/components/ui/: button.tsx
frontend/lib/: store.ts  types.ts
frontend/public/data/: cards.json  conversations.json
prompts/: team_ai.md
